<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/languageselector"
        android:title="@string/language"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/english"
                android:title="@string/english"
                app:showAsAction="never"/>
            <item
                android:id="@+id/spanish"
                android:title="@string/spanish"
                app:showAsAction="never"/>

            <item
                android:id="@+id/german"
                android:title="@string/german"
                app:showAsAction="never"/>

            <item
                android:id="@+id/french"
                android:title="French"
                app:showAsAction="never"/>


        </menu>
    </item>

</menu>